Fix scrollbar. Also add hover state.

--- a/garrysmod/html/css/menu/NavBar.css
+++ b/garrysmod/html/css/menu/NavBar.css
@@ -272,16 +272,20 @@ UL.language_list LI:hover
 
 ::-webkit-scrollbar
 {
-	width: 8px;
-	height: 8px;
-	background-color: rgb( 250, 250, 250 );
+	width: 12px;
+	background-color: #FAFAFA;
 	border-radius: 1px;
 }
 
 ::-webkit-scrollbar-thumb
 {
-	background-color: rgb( 180, 180, 180);
-	border-radius: 2px;
+	background: -webkit-linear-gradient(left, transparent 2px, #B4B4B4 2px, #B4B4B4 10px, transparent 10px);
+	border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover 
+{
+	background: -webkit-linear-gradient(left, transparent 2px, #999999 2px, #999999 10px, transparent 10px);
 }
 
 .popup
